# Antivirus-Attempt

./: Cargo.toml  config.json  pyproject.toml  sentinel_backend.db
backend/: __init__.py  config.example.json  requirements.txt
backend/api/: __init__.py  app.py  database.py  dependencies.py  legacy_router.py  models.py  router.py  schemas.py  service.py  threat_hunting_ml_routes.py
backend/attack/: mapper.py
backend/attack/intel/: feed_sync.py  ioc_matcher.py
backend/enrichment/: alert_enricher.py  hash_reputation.py
backend/ml/: __init__.py  training_pipeline.py
backend/response/: actions.py  orchestrator.py
backend/threat_hunting/: __init__.py  query_engine.py
config/: edr_config.json
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
src/: agent.rs  amsi_integration.rs  attack_mapping.rs  backend_client.rs  behavioral_analyzer.rs  behavioral_events.rs  behavioral_pipeline.rs  boot_protection.rs  code_signing.rs  collectors.rs  config.json  config.rs  detection.rs  enrichment.rs  etw_monitor.rs  fim_engine.rs  ingest_server.rs  ingestion.rs  intel.rs  lib.rs  main.rs  memory_analyzer.rs  memory_events.rs  memory_pipeline.rs  memory_scanner_edr.rs  ml_threat_scoring.rs  models.rs  network_monitor_edr.rs  policy.rs  process_monitor.rs  ransomware_tracker.rs  registry_monitor_edr.rs  response.rs  response_orchestrator.rs  state.rs  telemetry.rs  threat_intel.rs  threat_intelligence_feeds.rs
src/detection/: yara_scanner.rs
src/driver/: callbacks.rs  communication.rs  minifilter.rs  mod.rs  network_filter.rs  protection.rs
yara_rules/: master_rules.yar  memory_rules.yar
yara_rules/exploit/: shellcode.yar
yara_rules/malware/: banking_trojans.yar  credential_theft.yar  execution_techniques.yar  ransomware.yar  ransomware_comprehensive.yar  webshells.yar
