[package]
name = "tamsilcms-sentinel"
version = "1.0.0"
edition = "2021"
authors = ["TamsilCMS Security Team"]
license = "MIT"
description = "Enterprise EDR/XDR Security Platform"

[[bin]]
name = "tamsilcms-agent"
path = "src/bin/agent.rs"

[[bin]]
name = "tamsilcms-endpoint-ui"
path = "src/bin/endpoint_ui.rs"

[[bin]]
name = "tamsilcms-suite"
path = "src/bin/tamsilcms_suite.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"

# Parsing
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }

# Windows APIs
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Security_WinTrust",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
]}

# Windows service
windows-service = "0.6"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
hostname = "0.3"
local-ip-address = "0.5"
sha2 = "0.10"
walkdir = "2.5"
async-trait = "0.1"
eframe = { version = "0.29", default-features = true, features = ["wgpu"] }
yara = { version = "0.30", optional = true, default-features = false, features = ["vendored", "bundled-4_5_2", "module-dotnet", "module-hash", "ndebug"] }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
embedded-yara = ["dep:yara"]

[lib]
name = "tamsilcms_sentinel"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
